bug 708453 - escape URLs before constructing NSURL. r=smichaud