toolkit/crashreporter/client/crashreporter_osx.mm
@@ -588,7 +588,7 @@ static bool RestartApplication()
 
 -(bool)setupPost
 {
-  NSURL* url = [NSURL URLWithString:NSSTR(gSendURL)];
+  NSURL* url = [NSURL URLWithString:[NSSTR(gSendURL) stringByAddingPercentEscapesUsingEncoding:NSUTF8StringEncoding]];
   if (!url) return false;
 
   mPost = [[HTTPMultipartUpload alloc] initWithURL: url];
